<resources>
    <string name="app_name">Hotel Room Booking</string>
    <string name="next">NEXT</string>
    <string name="menu_heading">Hotel Room Reservation</string>
    <string name="booking_details">Booking Details</string>
    <string name="bookingCheckInDate">Check-in date</string>
    <string name="book">Book</string>
    <string name="btncancel">Cancel</string>
    <string name="bookingCheckOutTime">Check-out time</string>
    <string name="bookingRoomTitle">Room title</string>
    <string name="bookingNoOfRooms">No of Rooms</string>
    <string name="bookingMobileNumber">Mobile Number</string>
    <string name="bookingEmail">Email</string>
    <string name="bookingFare">Fare</string>
    <string name="bookingDiscount">Discount</string>
    <string name="booking">Booking</string>
    <string name="payment">Payment</string>
    <string name="creditMonth">MM</string>
    <string name="creditYear">YY</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="cvc_number">CVC Number</string>
    <string name="totamount">Total Amount</string>
    <string name="pay">PAY</string>
    <string name="card_type">Card Type</string>
    <string name="check_in_time">Check-in time</string>
    <string name="check_out_date">Check out date</string>
    <string name="paid">Paid</string>
    <string name="booking_description">Booking Description</string>
    <string name="booking_1">Booking 1</string>
    <string name="login">login</string>
    <string name="red_woods">RED WOODS</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">Name</string>
    <string name="us">US!</string>
    <string name="take_your_first_step_with_us">Take your first step with us</string>
    <string name="category_name">Category Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="title_activity_room_category_view_acitvity">RoomCategoryViewAcitvity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back">Back</string>
    <string name="room_type">Room Type</string>
    <string name="room_title">Room Title</string>
    <string name="room_number">Room Number</string>
    <string name="no_of_beds">No of Beds</string>
    <string name="max_adults">Max Adults</string>
    <string name="max_children">Max Children</string>
    <string name="room_facilities">Room Facilities</string>
    <string name="baby_sitting">Baby Sitting</string>
    <string name="additonal_beds">Additonal Beds</string>
    <string name="add">ADD</string>
    <string name="room_fare">Room Fare</string>
    <string name="room_image">Room Image</string>
    <string name="choose">Choose</string>
    <string name="free_wifi">Free WIFI</string>
    <string name="laundry_services">Laundry Services</string>
    <string name="view">View</string>
    <string name="fare_rs_6_000_00">Fare - Rs. 6 000.00</string>
    <string name="no_of_beds_1">No of Beds - 1</string>
    <string name="room_number_1005">Room Number - 1005</string>
    <string name="rooms">Rooms</string>
    <string name="search">Search</string>
    <string name="book_now">Book Now</string>
    <string name="max_children_3">Max Children-3</string>
    <string name="max_adults_2">Max Adults-2</string>
    <string name="description_a_room_assigned_to_one_person_may_have_one_or_more_beds_the_room_size_or_area_of_single_rooms_are_generally_between_37_m_to_45_m_room_type_in_hotel_single_room">Description - A room assigned to one person. May have one or more beds. The room size or area of Single Rooms are generally between 37 m² to 45 m².Room Type In hotel - Single Room</string>
    <string name="add_rooms1">add_rooms</string>
    <string name="room_category_single_room">Room_category_single_room</string>
    <string name="add_rooms">Add Rooms</string>
    <string name="title_activity_signinpage">Signinpage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="join_with">Join with</string>
    <string name="redwoods">RedWoods</string>
    <string name="room_category">Room Category</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="contact_number">Contact Number</string>
    <string name="gender">Gender</string>
    <string name="nic_number">NIC Number</string>
    <string name="submit">SUBMIT</string>
    <string name="thuvaraka_t">Thuvaraka T.</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="details">Details</string>
    <string name="welcome_to">Welcome to</string>
    <string name="rew_woods">Rew Woods</string>
    <string name="employee">Employee</string>
    <string name="todo">TODO</string>
    <string name="room">Room</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="EmployeeName">Employee Name</string>
    <string name="Employeeid">Employee ID</string>
    <string name="ContactNumber">Contact Number</string>
    <!--    <string name="gender">Gender</string>-->
    <string name="NICnumber">NIC Number</string>
    <string name="RoomTitle">Rooms</string>
    <string name="Title_room">Room Title</string>
    <string name="RoomNumber">Room Number</string>
    <string name="NoBeds">Number of Beds</string>
    <string name="MaxAdults">Number of Adults</string>
    <string name="MaxChildren">Number of Children</string>
    <string name="RoomFare">Room Fare Per Night</string>
    <string name="Facility">Additional Facilities</string>
    <string name="ImageRoom">Room Image</string>
    <string name="RoomDescription">Description</string>
    <string name="Room_Details">Room Details</string>
    <string name="RoomTitleView">Room 1</string>
    <string name="RoomDescriptionView">Room Description</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>


</resources>