<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addroom"
    tools:context=".AdminRoomUpdateActivity">


    <Button
        android:id="@+id/btnback"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/homeAsUpIndicator"
        app:backgroundTint="@color/Yellow"
        android:onClick="onClickViewRoomAdmin"
        android:layout_alignParentLeft="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Roomtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lobster_two_bold"
                android:text="@string/RoomTitle"
                android:textColor="@color/black"
                android:textSize="35dp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:padding="15dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <EditText
                        android:id="@+id/RoomType"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/room_type"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColorHint="@color/black" />

                    <EditText
                        android:id="@+id/Title_Room"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/Title_room"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColorHint="@color/black" />

                    <EditText
                        android:id="@+id/RoomNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/RoomNumber"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/black"
                        android:textSize="17dp" />

                    <EditText
                        android:id="@+id/NoBeds"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/NoBeds"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/black"
                        android:textSize="17dp" />

                    <EditText
                        android:id="@+id/MaxAdults"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/MaxAdults"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/MaxChildren"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/MaxChildren"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/black"
                        android:textSize="17dp" />

                    <EditText
                        android:id="@+id/RoomFare"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/RoomFare"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="@color/black"
                        android:textSize="17dp" />

                    <EditText
                        android:id="@+id/RoomDescription"
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/edit_round"
                        android:hint="@string/RoomDescription"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColorHint="@color/black" />

                    <TextView
                        android:id="@+id/Facility"
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Facility"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="17sp" />

                    <CheckBox
                        android:id="@+id/simpleCheckBox1"
                        android:checked="false"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/additonal_beds"
                        android:textColor="@color/black"


                        />

                    <CheckBox
                        android:id="@+id/simpleCheckBox2"
                        android:checked="false"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baby_sitting"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/simpleCheckBox3"
                        android:checked="false"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free_wifi"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/simpleCheckBox4"
                        android:checked="false"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/laundry_services"
                        android:textColor="@color/black" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical" >



                        <Button
                            android:id="@+id/update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10sp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/ash"
                            android:onClick="onClickViewRoomAdmin"
                            android:text="@string/Edit"
                            android:textColor="@color/black"
                            app:cornerRadius="20dp" />

                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>